--- a/ARL/nbproject/project.properties
+++ b/ARL/nbproject/project.properties
@@ -28,18 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.commons-beanutils-1.8.2.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\commons-beanutils-1.8.2.jar
-file.reference.commons-collections-3.2.1.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\commons-collections-3.2.1.jar
-file.reference.commons-digester-2.1.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\commons-digester-2.1.jar
-file.reference.commons-javaflow-20060411.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\commons-javaflow-20060411.jar
-file.reference.commons-logging-1.1.1.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\commons-logging-1.1.1.jar
-file.reference.groovy-all-1.7.5.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\groovy-all-1.7.5.jar
-file.reference.iText-2.1.7.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\iText-2.1.7.jar
-file.reference.jasperreports-4.7.1.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\jasperreports-4.7.1.jar
-file.reference.jasperreports-javaflow-4.7.1.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\jasperreports-javaflow-4.7.1.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
-file.reference.png-encoder-1.5.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\png-encoder-1.5.jar
-file.reference.poi-3.7.jar=C:\\Users\\emart\\OneDrive\\Desktop\\JARs Para la librer\u00eda JasperReports\\JARs Para la librer\u00eda JasperReports\\poi-3.7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -54,18 +42,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-beanutils-1.8.2.jar}:\
-    ${file.reference.commons-collections-3.2.1.jar}:\
-    ${file.reference.commons-digester-2.1.jar}:\
-    ${file.reference.commons-javaflow-20060411.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.groovy-all-1.7.5.jar}:\
-    ${file.reference.iText-2.1.7.jar}:\
-    ${file.reference.jasperreports-4.7.1.jar}:\
-    ${file.reference.jasperreports-javaflow-4.7.1.jar}:\
-    ${file.reference.png-encoder-1.5.jar}:\
-    ${file.reference.poi-3.7.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -92,7 +69,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
